--- a/02_LCD/MDK-ARM/02_LCD/02_LCD.build_log.htm
+++ b/02_LCD/MDK-ARM/02_LCD/02_LCD.build_log.htm
@@ -27,6 +27,11 @@ Project File Date:  09/13/2025
 <h2>Output:</h2>
 *** Using Compiler 'V6.23', folder: 'C:\Users\VO QUANG VINH\AppData\Local\Keil_v5\ARM\ARMCLANG\Bin'
 Build target '02_LCD'
+compiling LCD.c...
+compiling main.c...
+linking...
+Program Size: Code=3484 RO-data=304 RW-data=12 ZI-data=1676  
+FromELF: creating hex file...
 "02_LCD\02_LCD.axf" - 0 Error(s), 0 Warning(s).
 
 <h2>Software Packages used:</h2>
@@ -51,7 +56,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE@6.1.0
       Include file:  CMSIS/Core/Include/tz_context.h
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
